[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/EndOfLevelController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/GiveUpButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/PauseButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/UI/RestartButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/SlomoButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Effects/gameplay_utility_bar.tres" type="Theme" id=9]
[ext_resource path="res://Scenes/Effects/StoryText.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UI/NextLevelButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/UI/PageNumber.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Fonts/FancyQuisleyRegular-eZq4e.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Assets/Icons/bookmark1.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 13 )

[node name="GUI" type="CanvasLayer" groups=["InterfaceController"]]
pause_mode = 2
layer = 99
script = ExtResource( 2 )

[node name="EndOfLevel" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="EndOfLevel"]
modulate = Color( 1, 1, 1, 0.729412 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -83.0
margin_right = 150.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EndOfLevel/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WinLose" type="RichTextLabel" parent="EndOfLevel/Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -57.0
margin_right = 100.0
margin_bottom = 4.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevelButton" type="Button" parent="EndOfLevel/Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -59.0
margin_right = 95.0
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="EndOfLevel/Popup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -59.0
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryText" parent="." instance=ExtResource( 10 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Transition" parent="." instance=ExtResource( 3 )]
layer = 128

[node name="GameplayUtilityBar" type="Control" parent="."]
visible = false
anchor_left = 0.891602
anchor_top = 0.00166667
anchor_right = 1.0
anchor_bottom = 0.675
margin_left = 12.0
margin_top = -7.0
margin_right = 12.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="GameplayUtilityBar"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = -0.207208
anchor_top = -0.123762
anchor_right = 0.800904
anchor_bottom = 0.891337
margin_right = 261.1
margin_bottom = 956.9
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 14 )
patch_margin_left = 165
patch_margin_top = 173
patch_margin_right = 157
patch_margin_bottom = 759
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameplayUtilityBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 18.0
margin_right = -42.9996
margin_bottom = -35.0
theme = ExtResource( 9 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" parent="GameplayUtilityBar/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 67.0
margin_bottom = 60.0

[node name="RestartButton" parent="GameplayUtilityBar/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 67.0
margin_bottom = 130.0

[node name="GiveUpButton" parent="GameplayUtilityBar/VBoxContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 68.0
margin_bottom = 200.0

[node name="NextLevelButton" parent="GameplayUtilityBar/VBoxContainer" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 67.0
margin_bottom = 200.0

[node name="SlomoButton" parent="GameplayUtilityBar/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 67.0
margin_bottom = 270.0

[node name="PageNumber" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[connection signal="button_down" from="EndOfLevel/Popup/RestartLevelButton" to="EndOfLevel" method="_on_RestartLevelButton_button_down"]
[connection signal="button_down" from="EndOfLevel/Popup/NextLevelButton" to="EndOfLevel" method="_on_NextLevelButton_button_down"]
